Update README.md to reflect system requirements and clarify Java version dependencies
- Specified that glibc version must be 2.38 or higher for proper functionality.
- Revised instructions for running the bot directly and clarified native library installation steps.
- Enhanced documentation for Docker usage and configuration persistence.